--- a/dosfstools/manpages/de/fatlabel.de.8
+++ b/dosfstools/manpages/de/fatlabel.de.8
@@ -24,37 +24,45 @@
 .\" This file was generated with po4a. Translate the source file.
 .\"
 .\"*******************************************************************
-.TH FATLABEL 8 2014\-11\-12 3.0.27 dosfstools
-
+.TH FATLABEL 8 2015\-05\-16 3.0.28 dosfstools
 .SH NAME
+.\" ----------------------------------------------------------------------------
 \fBfatlabel\fP \- set or get MS\-DOS filesystem label
-
 .SH SYNOPSIS
+.\" ----------------------------------------------------------------------------
 \fBfatlabel\fP \fIDEVICE\fP [\fILABEL\fP]
-
 .SH DESCRIPTION
 \fBfatlabel\fP set or gets a MS\-DOS filesystem label from a given device.
 .PP
-If the label is omitted, then the label name of the specified device is
-written on the standard output. A label can't be longer than 11 bytes.
-
+.\" ----------------------------------------------------------------------------
+If \fILABEL\fP is omitted, then the label name of the specified device is
+written on the standard output.  A label can't be longer than 11 bytes.
 .SH OPTIONS
 .IP "\fB\-h\fP, \fB\-\-help\fP" 4
 Displays a help message.
 .IP "\fB\-V\fP, \fB\-\-version\fP" 4
+.\" ----------------------------------------------------------------------------
 Shows version.
-
 .SH "SEE ALSO"
 \fBfsck.fat\fP(8)
 .br
+.\" ----------------------------------------------------------------------------
 \fBmkfs.fat\fP(8)
-
 .SH HOMEPAGE
-More information about \fBfatlabel\fP and \fBdosfstools\fP can be found at
-<\fIhttp://daniel\-baumann.ch/software/dosfstools/\fP>.
-
+.\" ----------------------------------------------------------------------------
+The home for the \fBdosfstools\fP project is its
+.UR https://github.com/dosfstools/dosfstools
+GitHub project page
+.UE .
 .SH AUTHORS
-\fBdosfstools\fP were written by Werner Almesberger
-<\fIwerner.almesberger@lrc.di.epfl.ch\fP>, Roman Hodek
-<\fIRoman.Hodek@informatik.uni\-erlangen.de\fP>, and others. The current
-maintainer is Daniel Baumann <\fImail@daniel\-baumann.ch\fP>.
+\fBdosfstools\fP were written by
+.MT werner.almesberger@\:lrc.di.epfl.ch
+Werner Almesberger
+.ME ,
+.MT Roman.Hodek@\:informatik.\:uni-erlangen.de
+Roman Hodek
+.ME ,
+and others.  The current maintainer is
+.MT aeb@\:debian.org
+Andreas Bombe
+.ME .
